name:                car-baselines
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable car-test
  main-is:             Test.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  build-depends:       base >=4.9 && <4.10,
                       filepath,
                       containers >=0.5 && <0.6,
                       dlist >= 0.7,
                       log-domain,
                       laura,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.3,
                       pipes,
                       pipes-safe,
                       text,
                       binary,
                       b-tree,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12
  default-language:    Haskell2010
