name:                car-baselines
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable car-retrieval
  main-is:             CarBaselines.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  build-depends:       base >=4.9 && <4.11,
                       filepath,
                       containers >=0.5 && <0.6,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.3,
                       pipes,
                       pipes-safe,
                       text,
                       binary,
                       binary-serialise-cbor >= 0.1,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010


executable trec-car-entity-search
  main-is:             EntitySearch.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  build-depends:       base >=4.9 && <4.11,
                       filepath,
                       containers >=0.5 && <0.6,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.3,
                       pipes,
                       pipes-safe,
                       text,
                       binary,
                       binary-serialise-cbor >= 0.1,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       hashable
  default-language:    Haskell2010

executable rank-entities
  main-is:             RankEntities.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11,
                       containers,
                       optparse-applicative >= 0.12,
                       trec-car-tools

executable entityranking-with-lead
  main-is:             EntityRankingToEntityLeadPassage.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11,
                       containers,
                       optparse-applicative >= 0.12,
                       unordered-containers >= 0.2,
                       trec-car-tools

executable car-galago-query
  main-is:             GalagoQuery.hs
  other-extensions:    ScopedTypeVariables, BangPatterns
  build-depends:       base >=4.9 && <4.11,
                       filepath,
                       containers >=0.5 && <0.6,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
                       simplir,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.3,
                       charset >=0.3 && <0.4,
                       pipes,
                       pipes-safe,
                       text,
                       binary,
                       binary-serialise-cbor >= 0.1,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010
