name:                crate
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: ConvertToCrateData
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable crate
  main-is:             CrateMain.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5,
                       text,
                       random >=1.1 && <1.2,
                       random-shuffle,
                       MonadRandom,
                       optparse-applicative >= 0.12,
                       trec-car-types,
                       crate
  -- hs-source-dirs:      src
  default-language:    Haskell2010
