name:                db-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable db-export
  main-is:             DbExport.hs
  other-extensions:    QuasiQuotes, StandaloneDeriving, RecordWildCards, ParallelListComp, GeneralizedNewtypeDeriving
  ghc-options:         -threaded -rtsopts
  build-depends:       base >=4.10 && <4.11,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >= 0.10,
                       text >=1.2 && <1.3,
                       split >=0.2 && <0.3,
                       async >=2.1 && <2.2,
                       pipes >=4.3 && <4.4,
                       pipes-concurrency,
                       optparse-applicative >= 0.13,
                       trec-car-tools,
                       postgresql-simple
  default-language:    Haskell2010
