name:                db-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable db-export
  main-is:             DbExport.hs
  other-extensions:    QuasiQuotes, StandaloneDeriving, RecordWildCards, ParallelListComp, GeneralizedNewtypeDeriving
  ghc-options:         -threaded -rtsopts -with-rtsopts=-A64M
  build-depends:       base,
                       hashable >=1.2 && <1.4,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >= 0.10,
                       text >=1.2 && <1.3,
                       split >=0.2 && <0.3,
                       async >=2.1 && <2.3,
                       pipes >=4.3 && <4.4,
                       pipes-concurrency,
                       optparse-applicative >= 0.13,
                       deepseq >= 1.4,
                       postgresql-simple,
                       trec-car-tools,
                       trec-car-types,
                       simplir
  default-language:    Haskell2010
