name:                dbpedia-entity-import
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://git.smart-cactus.org/ben/mediawiki-annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable dbpedia-entity-import
  main-is:             DBpediaEntityMain.hs
  other-extensions:    DeriveAnyClass, DerivingStrategies
  build-depends:       base,
                       containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       optparse-applicative >= 0.12,
                       binary-serialise-cbor,
                       unordered-containers >= 0.2,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       simplir,
                       trec-car-tools
  default-language:    Haskell2010


executable hazymemory-import
  main-is:             HazyMemoryImportMain.hs
  other-extensions:    DeriveAnyClass, DerivingStrategies
  build-depends:       base,
                       containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       optparse-applicative >= 0.12,
                       binary-serialise-cbor,
                       unordered-containers >= 0.2,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       simplir,
                       tag-me,
                       trec-car-tools
  default-language:    Haskell2010

executable toponym-tagme
  main-is:             ToponymTagMeMain.hs
  other-extensions:    DeriveAnyClass, DerivingStrategies
  other-modules:       ToponymGroundTruthParser
  build-depends:       base,
                       containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text >=1.2 && <1.3,
                       bytestring >= 0.10,
                       optparse-applicative >= 0.12,
                       binary-serialise-cbor,
                       unordered-containers >= 0.2,
                       hashable >= 1.2,
                       serialise,
                       aeson >=1.2 && <1.5,
                       optparse-applicative >= 0.14,
                       filepath,
                       servant-client>=0.16,
                       log-domain,
                       trifecta,
                       simplir,
                       tag-me,
                       trec-car-tools
  default-language:    Haskell2010

