name:                ent-rank-tools
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     AspectUtils,
                       EdgeDocCorpus,
                       GridFeatures,
                       MultiTrecRunFile,
                       TrainAndStore
                       Clone.RunFile
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5,
                       hashable,
                       optparse-applicative >= 0.12,
                       unordered-containers,
                       containers,
                       dlist,
                       text,
                       text-short,
                       regex-compat,
                       lens,
                       bytestring,
                       random,
                       deepseq,
                       parallel,
                       serialise,
                       aeson,

                       simplir,
                       simplir-io,
                       simplir-learning-to-rank,
                       trec-car-tools,
                       trec-car-types
  hs-source-dirs:      src
  default-language:    Haskell2010
