name:                ent-rank
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10



library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     CandidateGraph,
                       NodeAndEdgeFeatures,
                       LookupWrapper
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
--                       simplir-disk-index,
                       pipes,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       parallel,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       dlist,
                       random,
                       split,
                       graph-algorithms,
--                       simplir-word-embedding,
                       trec-car-tools,
                       lens,
                       wl-pprint-text,
                       trec-car-graph-expansion
  default-language:    Haskell2010




executable graph-expansion-feature-generation
  main-is:             EntRankMain.hs
--  other-modules:       WriteRanking
  ghc-options:         -Wall -threaded -rtsopts -eventlog
  build-depends:       base,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       vector,
                       indexed-vector,
                       containers,
                       stm,
                       random,
                       lens,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       wl-pprint-text,
                       hashable,
                       heaps,
                       psqueues,
                       graphviz,
                       transformers,
                       aeson,
                       simplir,
                       simplir-disk-index,
                       pipes,
                       parallel,
                       serialise,
                       pipes-safe,
                       pipes,
                       foldl,
                       dlist,
                       serialise,
                       filepath,
                       log-domain,
                       snowball,
                       time,
                       split,
                       graph-algorithms,
                       trec-car-graph-expansion,
--                       simplir-word-embedding,
                       trec-car-graph-expansion,
                       trec-car-tools,
                       ent-rank
  default-language:    Haskell2010


executable graph-expansion-page-doc
  main-is:             PageDocCorpusMain.hs
  ghc-options:         -Wall -rtsopts
  build-depends:       base,
                       text >= 1.2,
                       bytestring,
                       optparse-applicative >= 0.13,
                       serialise,
                       parallel,
                       filepath,
                       hashable,
                       deepseq,
                       foldl,
                       unordered-containers >= 0.2,
                       containers,
                       pipes,
                       pipes-safe,
                       pipes-bytestring,
                       snowball,
                       trec-car-tools,
                       simplir,
                       warc,
                       filepath,
                       containers,
                       unordered-containers >= 0.2,
                       dlist >= 0.7,
                       log-domain,
--                       simplir,
--                       simplir-disk-index,
                       trec-car-tools,
                       profunctors,
                       foldl >=1.2 && <1.5,
                       pipes,
                       pipes-safe,
                       text,
                       serialise,
                       aeson,
                       bytestring,
                       optparse-applicative >= 0.12,
                       trec-car-tools,
                       trec-car-graph-expansion,
                       ansi-wl-pprint,
                       hashable,
                       ent-rank
  default-language:    Haskell2010

