name:                epfl-section-recommendation
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@cs.unh.edu
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable epfl-section-recommendation
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       containers,
                       aeson,
                       optparse-applicative,
                       bytestring,
                       text,
                       trec-car-tools,
                       simplir
  -- hs-source-dirs:
  default-language:    Haskell2010

