name:                evalmetrics
version:             0.1.0.0

synopsis:            Data Science Evaluation Metrics such as F1-Measure
license:             BSD3

license-file:        LICENSE

author:              Laura Dietz

maintainer:          dietz@smart-cactus.org

category:            Data

build-type:          Simple

extra-source-files:  CHANGELOG.md

cabal-version:       >=1.10


library
  -- Modules exported by the library.
   exposed-modules: EvalConfusionMatrix

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.13

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


