name:                trec-car-filter-duplicates
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable trec-car-find-duplicates
  main-is:             FindDuplicates.hs
  other-extensions:    ForeignFunctionInterface, MagicHash, UnliftedFFITypes
  build-depends:       base >=4.9 && <4.10,
                       hashable >=1.2 && <1.3,
                       text >=1.2 && <1.3,
                       vector >=0.12 && <0.13,
                       unordered-containers >=0.2 && <0.3,
                       vector-algorithms >=0.7 && <0.8,
                       snowball >=1.0 && <1.1,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.6 && <0.7,
                       optparse-applicative >= 0.13,
                       parallel >= 3.2,
                       simplir,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010

executable trec-car-rewrite-duplicates
  main-is:             RewriteDuplicates.hs
  other-extensions:    ForeignFunctionInterface, MagicHash, UnliftedFFITypes
  build-depends:       base >=4.9 && <4.10,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.13,
                       simplir,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010
