name:                trec-car-filter-duplicates
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Bloom.IntSet
                       Bloom.Naive
                       Bloom.Opt
                       Word1024
                       Utils
                       ConnectedComponent
                       IntSet
  hs-source-dirs:      src
  c-sources:           cbits/bloom.c
  cc-options:          -march=haswell
  other-extensions:    ForeignFunctionInterface, MagicHash, UnliftedFFITypes
  build-depends:       base >=4.9 && <4.11,
                       primitive >= 0.6,
                       hashable >=1.2 && <1.3,
                       text >=1.2 && <1.3,
                       vector >=0.12 && <0.13,
                       unordered-containers >= 0.2,
                       snowball >=1.0 && <1.1,
                       parallel >= 3.2,
                       deepseq,
                       simplir,
                       intset,
                       trec-car-tools
  ghc-options:         -optc=-march=skylake -optc=-g3
  default-language:    Haskell2010

executable trec-car-find-duplicates
  main-is:             FindDuplicates.hs
  build-depends:       base,
                       hashable >=1.2 && <1.3,
                       vector >=0.12 && <0.13,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       vector-algorithms >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.6 && <0.7,
                       optparse-applicative >= 0.13,
                       parallel >= 3.2,
                       intset,
                       trec-car-filter-duplicates,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded -with-rtsopts=-N -with-rtsopts=-A64M -optc=-march=skylake
  default-language:    Haskell2010

executable trec-car-rewrite-duplicates
  main-is:             RewriteDuplicates.hs
  build-depends:       base,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.13,
                       trec-car-filter-duplicates,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010

executable trec-car-duplicates-rewrite-table
  main-is:             DuplicatesRewriteTable.hs
  build-depends:       base,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.13,
                       simplir,
                       trec-car-filter-duplicates,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010

executable trec-car-minhash-duplicates
  main-is:             MinHash.hs
  other-extensions:    ForeignFunctionInterface, MagicHash, UnliftedFFITypes
  build-depends:       base,
                       hashable >=1.2 && <1.3,
                       containers >= 0.5,
                       deepseq >= 1.4,
                       stm,
                       async,
                       text >= 1.2,
                       vector >= 0.12,
                       vector-algorithms,
                       parallel >= 3.2,
                       mwc-random >= 0.13,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.13,
                       simplir,
                       snowball,
                       simplir-word-embedding,
                       trec-car-filter-duplicates,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010


executable test-duplicates
  main-is:             TestDuplicates.hs
  other-extensions:    ForeignFunctionInterface, MagicHash, UnliftedFFITypes
  build-depends:       base,
                       hashable >=1.2 && <1.3,
                       containers >= 0.5,
                       deepseq >= 1.4,
                       stm,
                       async,
                       text >= 1.2,
                       vector >= 0.12,
                       vector-algorithms,
                       parallel >= 3.2,
                       mwc-random >= 0.13,
                       unordered-containers >=0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >= 0.13,
                       simplir,
                       snowball,
                       simplir-word-embedding,
                       trec-car-filter-duplicates,
                       trec-car-tools
  ghc-options:         -rtsopts -threaded
  default-language:    Haskell2010
  
test-suite word1024-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base,
                       primitive >= 0.6,
                       hashable >=1.2 && <1.3,
                       QuickCheck >= 2.9,
                       trec-car-filter-duplicates
  default-language:    Haskell2010
